addition of private finals